# pybox

./: .dockerignore  Dockerfile  pyproject.toml  tools
infra/charts/argo-cd/: values.yaml
infra/charts/pybox/: Chart.yaml  README.md  values.yaml
infra/charts/pybox/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
infra/k8s/: namespace.yaml
src/: main.py
